style/main.less
@broken-white:  #eeeeee;
@crushed-black: #222222;
@accent:        #bb2211;

@content-width: 800px;

html {
    background-color: @broken-white;
    color:            @crushed-black;
}

body {
    margin: 0px;
}

.header-wide {
    background-image:    url("../images/header-background.png");
    background-position: center top;
    background-repeat:   repeat-x;
    margin:              12px 0px 0px 0px;
}

header {
    background-image: url("../images/header-road.png");
    color:            @accent;
    font-size:        42px;
    height:           261px;
    margin:           0px auto 0px auto;
    position:         relative;
    text-align:       center;
    text-transform:   uppercase;
    width:            @content-width;
    font-weight:      bold;
}

navigation {
    border-bottom:  solid 2px @accent;
    display:        block;
    margin:         18px auto 12px auto;
    padding:        0px 0px 6px 0px;
    text-transform: uppercase;
    text-align:     center;
    width:          @content-width;

    a {
        color:           @crushed-black;
        font-size:       30px;
        padding:         0px 20px 0px 20px;
        text-decoration: none;
    }

    a.active {
        color:           @accent;
    }
}

main {
    width:  @content-width;
    margin: 0px auto 0px auto;
}

.sponsors {
    text-align: center;

    .sponsor {
        height:     160px;
        width:      200px;
        text-align: center;

        img {
            vertical-align: middle;
        }
    }
}

@import "skater.less";
@import "typography.less";

